# eds-python

./: .gitignore  README.md  eds.spec  pyproject.toml
eds/: __main__.py  dbchange.py  driver.py  metrics.py  schema.py
eds/api/: __init__.py
eds/cmd/: args.py  config.py  download.py  enroll.py  exit_codes.py  fork.py  import_client.py  import_cmd.py  loopback.py  notification_wiring.py  root.py  server.py  session.py
eds/consumer/: batch_processor.py  bufferer.py  config.py  connection.py  consumer.py  credentials.py
eds/drivers/: __init__.py  sql_base.py
eds/drivers/eventhub/: __init__.py
eds/drivers/file/: __init__.py
eds/drivers/kafka/: __init__.py
eds/drivers/mysql/: __init__.py  data_db.py  driver.py  sql.py
eds/drivers/postgresql/: __init__.py  data_db.py  driver.py  sql.py
eds/drivers/s3/: __init__.py
eds/drivers/snowflake/: __init__.py  datadb.py  snowflake.py  snowflake_keypair.py  sql.py
eds/drivers/sqlserver/: __init__.py  data_db.py  driver.py  sql.py
eds/importer/: __init__.py
eds/notification/: __init__.py  dtos.py
eds/osext/: __init__.py
eds/registry/: __init__.py
eds/tracker/: __init__.py
eds/upgrade/: __init__.py
eds/util/: api.py  batcher.py  cache.py  compress.py  crdb.py  db.py  docker.py  duration.py  file.py  gofloat.py  gojson.py  gostruct.py  gourl.py  hash.py  help.py  http.py  json.py  logger.py  mask.py  nats.py  optimize.py  process.py  schema.py  shutdown.py  sql.py  sysinfo.py
migration/: DEFERRALS.md  DEVIATIONS.md  PLAN.md  SPEC.md  STAGE2_SCOPE.md  package-map.md
migration/features/: audit-mode.md  import-config-fallback.md  import-log-verbosity.md  import-recovery.md
migration/research/: api-cmds.md  drivers-sql.md  drivers-stream.md  import.md  metrics-registry.md  notification.md  upgrade-osext.md  util-data.md  util-net.md
packaging/: build.py  eds_entry.py
tests/: test_api_dtos.py  test_api_jwt.py  test_audit_mode_plumbing.py  test_batcher.py  test_bufferer.py  test_cache.py  test_config_writer.py  test_consumer_batch.py  test_consumer_config.py  test_consumer_e2e.py  test_consumer_migration.py  test_crdb.py  test_credentials.py  test_db.py  test_dbchange.py  test_driver.py  test_driver_registration.py  test_drivers_registration.py  test_enroll.py  test_eventhub_driver.py  test_file_driver.py  test_fork_port.py  test_gojson.py  test_gourl.py  test_hash.py  test_http.py  test_import_client.py  test_import_cmd.py  test_import_config_fallback.py  test_import_recovery.py  test_importer.py  test_infra.py  test_kafka_driver.py  test_kafka_e2e.py  test_log_file_sink.py  test_logging.py  test_mask.py  test_metrics.py  test_mysql_append.py  test_mysql_e2e.py  (+34 more)
tests/fixtures/schema/: config.json  labor.json
tests/fixtures/schema/base/: message.json
tests/fixtures/schema/models/: labor.json
