[project]
name = "eds"
version = "1.0.0"
description = "Shopmonkey Enterprise Data Streaming (EDS) consumer — faithful Python port of edsGolang"
requires-python = ">=3.10"
# Runtime deps are installed per-milestone (see migration/package-map.md); this list grows as milestones land.
dependencies = [
    "xxhash",
    "msgpack",
    "nats-py[nkeys]",
    "requests",
    "tomli; python_version < '3.11'",
    "pgpy",
    "jsonschema",
    "prometheus-client",  # metrics.py imports it top-level (server/fork crash on a clean install without it)
    "psutil",             # metrics.py + sysinfo.py (system stats, get_local_ip at session start); lazy-imported
    "boto3",            # s3 driver (AWS / GCS-interop / LocalStack); lazy-imported at connect
    "confluent-kafka",  # kafka driver (librdkafka producer); lazy-imported at connect
    "azure-eventhub",   # eventhub driver (Azure Event Hubs producer); lazy-imported at connect
]

[project.optional-dependencies]
# pytest-asyncio: asyncio_mode="auto" + filterwarnings=error means a clean install can't even COLLECT the
# async tests without it (the asyncio_* ini options raise an unknown-config error otherwise).
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.scripts]
eds = "eds.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["eds*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["error"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I import-sort, UP pyupgrade, B bugbear. Quirk-preserving code is
# annotated with `# PARITY:` and may carry per-line `# noqa` where idiom would change behavior.
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
# Pragmatic during the port; tightened per-module as code stabilizes.
ignore_missing_imports = true
